--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--css-->
     <link rel="stylesheet" type="text/css" href="styles.css"/>
-    <title>HTML 101</title>
+    <title>HTML 101: STAR WARS</title>
 </head>
 <body>
-    <h1>STAR WARS</h1>
+    <nav>
+        <ul>
+            <li><a href="./index.html">INDEX</a></li>
+            <li><a href="./droids.html">DROIDS</a></li>
+            <li><a href="./people.html">PEOPLE</a></li>
+            <li><a href="https://www.starwars.com/">OFFICIAL SITE</a></li>
+        </ul>
+    </nav>
     <!--JS-->
     <script src="main.js"></script>
 </body>
