--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
             <li><a href="https://www.starwars.com/">OFFICIAL SITE</a></li>
         </ul>
     </nav>
+
+    <!--article-->
+    <article>
+        <section>
+            Lucas ipsum dolor sit amet coruscant secura kashyyyk vader biggs wampa ben kessel qui-gonn mandalore. Calrissian mara skywalker jawa organa. Yavin wicket secura solo jango. Luke maul mon yoda r2-d2 darth. Tatooine mothma moff mustafar leia amidala skywalker jawa anakin. Padmé solo kenobi vader darth gamorrean sebulba moff. Jade skywalker organa fett. Kenobi kenobi darth skywalker hutt kenobi ponda jade. Moff luke jawa moff wedge solo. Hutt lando antilles jinn tatooine jango. Skywalker c-3p0 wedge aayla organa chewbacca.
+        </section>
+        <section>
+            Darth han watto lando darth r2-d2 skywalker organa. Kessel solo solo naboo c-3p0. Skywalker darth wedge obi-wan hutt hutt wampa darth. Moff skywalker solo mustafar kashyyyk darth boba. Organa tatooine ben darth moff leia alderaan calrissian. Darth skywalker jar darth ackbar hutt. Moff chewbacca yoda dooku ackbar binks tatooine. Skywalker darth vader wedge wampa. Dagobah obi-wan mara bothan antilles boba. Boba ewok wampa darth jinn alderaan antilles. Boba kenobi binks lars wookiee cade. Sidious jango kamino solo gamorrean baba moff kashyyyk.
+        </section>
+        <section>
+            Solo calrissian skywalker bothan qui-gonn coruscant organa darth lando. Han palpatine fisto wampa moff mace skywalker moff. Dagobah k-3po boba ponda. Chewbacca dantooine hoth hutt moff darth moff. Ahsoka solo luke amidala zabrak solo yoda wampa. Antilles jawa yoda binks. Ben amidala utapau sith tatooine mara hutt luke. Moff padmé ackbar ewok fett greedo tusken raider k-3po. C-3po ewok anakin solo gonk moff dantooine kessel mace. Organa ackbar antilles antilles han. Coruscant dooku bespin luuke.
+        </section>
+        <section>
+            Mandalore tatooine ackbar amidala. Calamari yoda yoda calrissian k-3po mustafar darth yoda. Moff mon hutt maul. Darth luuke chewbacca dagobah. Mothma sith gonk jango gonk ackbar wedge. Wedge k-3po wicket fisto. Tusken raider windu solo luke grievous amidala chewbacca. Kamino skywalker wedge han biggs wedge kashyyyk. Moff kenobi jade yoda padmé darth. Mace darth thrawn qui-gon. Antilles jade solo skywalker. Skywalker hutt antilles fett dagobah darth. K-3po calamari moff moff boba ahsoka. Ahsoka wedge kenobi darth hutt darth maul.
+        </section>
+        <section>
+            Hutt obi-wan kessel jar. Skywalker windu jawa vader ewok mon sebulba skywalker hutt. Ewok organa kessel calamari baba. Ahsoka solo ventress droid darth moff anakin. Skywalker baba c-3po lars mace alderaan. Solo jade coruscant darth kashyyyk dooku. Mustafar hutt skywalker greedo palpatine antilles moff kessel. Solo zabrak skywalker mon kit. Darth skywalker windu antilles wookiee skywalker. Calrissian cade moff darth twi'lek greedo dagobah. Gonk skywalker dantooine chewbacca alderaan darth zabrak.
+        </section>
+    </article>
+    <!--footer-->
+    <footer>
+        <br/>
+    </footer>
     <!--JS-->
     <script src="main.js"></script>
 </body>
