--- a/people.html
+++ b/people.html
@@ -16,6 +16,9 @@
             <li><a href="https://www.starwars.com/">OFFICIAL SITE</a></li>
         </ul>
     </nav>
+    <footer>
+        <br/>
+    </footer>
     <!--JS-->
     <script src="main.js"></script>
 </body>
