--- a/droids.html
+++ b/droids.html
@@ -16,6 +16,14 @@
             <li><a href="https://www.starwars.com/">OFFICIAL SITE</a></li>
         </ul>
     </nav>
+
+    <div class="card">
+        <h3>BB-8</h3>
+        <div class="imageWrapper">
+            <img class="cardImage" src="https://lumiere-a.akamaihd.net/v1/images/bb-8-main_72775463.jpeg?region=187%2C40%2C882%2C496"/>
+        </div>
+    </div>
+
     <footer>
         <br/>
     </footer>
