--- a/people.html
+++ b/people.html
@@ -16,6 +16,26 @@
             <li><a href="https://www.starwars.com/">OFFICIAL SITE</a></li>
         </ul>
     </nav>
+
+    <div class="card">
+        <h3>name</h3>
+        <div class="imageWrapper">
+            image placeholder
+        </div>
+    </div>
+    <div class="card">
+        <h3>name</h3>
+        <div class="imageWrapper">
+            image placeholder
+        </div>
+    </div>
+    <div class="card">
+        <h3>name</h3>
+        <div class="imageWrapper">
+            image placeholder
+        </div>
+    </div>
+
     <footer>
         <br/>
     </footer>
